<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressLoadingDetails"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/block1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/imageAlbumDet"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/textAlbumTitleDet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="15dp"
            android:layout_toRightOf="@id/imageAlbumDet"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp"
            android:layout_toEndOf="@id/imageAlbumDet" />

        <TextView
            android:id="@+id/textArtistNameDet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textAlbumTitleDet"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_toRightOf="@id/imageAlbumDet"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="16sp"
            android:layout_toEndOf="@id/imageAlbumDet" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/block2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/block1"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/sub_block1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal"
            android:weightSum="6">

            <TextView
                android:id="@+id/textTitleCopyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/copyright_text"/>

            <TextView
                android:id="@+id/textCopyrightDet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sub_block2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal"
            android:weightSum="6">

            <TextView
                android:id="@+id/textTitleRelease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/releaseDate_text"/>

            <TextView
                android:id="@+id/textReleaseDateDet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sub_block3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal"
            android:weightSum="6">

            <TextView
                android:id="@+id/textTitleCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/country_text"/>

            <TextView
                android:id="@+id/textCountryDet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sub_block4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="6">

            <TextView
                android:id="@+id/textTitleGenreName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/primaryGenreName_text"/>

            <TextView
                android:id="@+id/textPrimaryGenreNameDet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

    </LinearLayout>

        <TextView
            android:id="@+id/textTracklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/block2"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:text="@string/song_list_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSongs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTracklist"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <TextView
            android:id="@+id/textLoadSongError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTracklist"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:visibility="gone" />


    </RelativeLayout>

</androidx.core.widget.NestedScrollView>